--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -39,6 +39,8 @@ jobs:
           WS_RESOLVEALLDEPENDENCIES: false
           WS_MAVEN_RESOLVEDEPENDENCIES: true
           WS_MAVEN_AGGREGATEMODULES: true
+          WS_NPM_RESOLVEDEPENDENCIES: true
+          WS_NPM_RESOLVELOCKFILE: false
           WS_FILESYSTEMSCAN: false
           WS_GENERATEPROJECTDETAILSJSON: true
         run: |
