--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -39,9 +39,7 @@ jobs:
           WS_RESOLVEALLDEPENDENCIES: false
           WS_MAVEN_RESOLVEDEPENDENCIES: true
           WS_MAVEN_AGGREGATEMODULES: true
-          WS_NPM_RESOLVEDEPENDENCIES: true
-          WS_NPM_RESOLVELOCKFILE: false
-          WS_FILESYSTEMSCAN: false
+          WS_FILESYSTEMSCAN: true
           WS_GENERATEPROJECTDETAILSJSON: true
         run: |
           curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
